[gd_scene load_steps=6 format=3 uid="uid://xpxbmuahrpml"]

[ext_resource type="Texture2D" uid="uid://dix5sr8lcwf1p" path="res://addons/gameanalytics/GameAnalytics.svg" id="1_lt62o"]
[ext_resource type="Script" path="res://Example.gd" id="1_vdms2"]

[sub_resource type="Theme" id="Theme_8nrff"]
default_font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_n8fky"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_lqbnw"]
font_size = 24

[node name="GameAnalytics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8nrff")
script = ExtResource("1_vdms2")
enable_info_log = true
enable_verbose_log = true
game_key_input = Object(LineEdit,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(300, 2.08165e-12),"layout_direction":0,"layout_mode":2,"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":2,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":1,"shortcut_context":null,"theme":null,"theme_type_variation":&"","text":"","placeholder_text":"","alignment":0,"max_length":0,"editable":true,"expand_to_text_length":false,"context_menu_enabled":true,"virtual_keyboard_enabled":true,"virtual_keyboard_type":0,"clear_button_enabled":false,"shortcut_keys_enabled":true,"middle_mouse_paste_enabled":true,"selecting_enabled":true,"deselect_on_focus_loss_enabled":true,"drag_and_drop_selection_enabled":true,"right_icon":null,"flat":false,"draw_control_chars":false,"select_all_on_focus":false,"caret_blink":false,"caret_blink_interval":0.65,"caret_column":0,"caret_force_displayed":false,"caret_mid_grapheme":false,"secret":false,"secret_character":"•","text_direction":0,"language":"","structured_text_bidi_override":0,"structured_text_bidi_override_options":[],"script":null)

secret_key_input = Object(LineEdit,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(300, 2.08165e-12),"layout_direction":0,"layout_mode":2,"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":2,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":1,"shortcut_context":null,"theme":null,"theme_type_variation":&"","text":"","placeholder_text":"","alignment":0,"max_length":0,"editable":true,"expand_to_text_length":false,"context_menu_enabled":true,"virtual_keyboard_enabled":true,"virtual_keyboard_type":0,"clear_button_enabled":false,"shortcut_keys_enabled":true,"middle_mouse_paste_enabled":true,"selecting_enabled":true,"deselect_on_focus_loss_enabled":true,"drag_and_drop_selection_enabled":true,"right_icon":null,"flat":false,"draw_control_chars":false,"select_all_on_focus":false,"caret_blink":false,"caret_blink_interval":0.65,"caret_column":0,"caret_force_displayed":false,"caret_mid_grapheme":false,"secret":false,"secret_character":"•","text_direction":0,"language":"","structured_text_bidi_override":0,"structured_text_bidi_override_options":[],"script":null)


[node name="Example" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -493.0
offset_top = -229.0
offset_right = 493.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="Header" type="VBoxContainer" parent="Example"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="Example/Header"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_lt62o")
expand_mode = 5
stretch_mode = 5

[node name="Title" type="Label" parent="Example/Header"]
layout_mode = 2
text = "GameAnalytics example"
label_settings = SubResource("LabelSettings_n8fky")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Example/Header"]
layout_mode = 2
text = "GDExtension version"
label_settings = SubResource("LabelSettings_lqbnw")
horizontal_alignment = 1

[node name="Keys" type="VBoxContainer" parent="Example"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Game Key" type="HBoxContainer" parent="Example/Keys"]
layout_mode = 2

[node name="Label" type="Label" parent="Example/Keys/Game Key"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
text = "Game Key:"
horizontal_alignment = 2

[node name="Game Key Input" type="LineEdit" parent="Example/Keys/Game Key"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2

[node name="Secret Key" type="HBoxContainer" parent="Example/Keys"]
layout_mode = 2

[node name="Label2" type="Label" parent="Example/Keys/Secret Key"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
text = "Secret Key:"
horizontal_alignment = 2

[node name="Secret Key Input" type="LineEdit" parent="Example/Keys/Secret Key"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2

[node name="Test Buttons" type="GridContainer" parent="Example"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 3

[node name="Empty Space 1" type="Control" parent="Example/Test Buttons"]
layout_mode = 2

[node name="Init Button" type="Button" parent="Example/Test Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Initialize GA"

[node name="Empty Space 2" type="Control" parent="Example/Test Buttons"]
layout_mode = 2

[node name="Business Button" type="Button" parent="Example/Test Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Send Business Event"

[node name="Ad Button" type="Button" parent="Example/Test Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Send Ad Event"

[node name="Resource Button" type="Button" parent="Example/Test Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Send Resource Event"

[node name="Progression Button" type="Button" parent="Example/Test Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Send Progression Event"

[node name="Error Button" type="Button" parent="Example/Test Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Send Error Event"

[node name="Design Button" type="Button" parent="Example/Test Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Send Design Event"

[connection signal="pressed" from="Example/Test Buttons/Init Button" to="." method="test_init"]
[connection signal="pressed" from="Example/Test Buttons/Business Button" to="." method="test_business"]
[connection signal="pressed" from="Example/Test Buttons/Ad Button" to="." method="test_ad"]
[connection signal="pressed" from="Example/Test Buttons/Resource Button" to="." method="test_resource"]
[connection signal="pressed" from="Example/Test Buttons/Progression Button" to="." method="test_progression"]
[connection signal="pressed" from="Example/Test Buttons/Error Button" to="." method="test_error"]
[connection signal="pressed" from="Example/Test Buttons/Design Button" to="." method="test_design"]
